--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </form>
             </div>
             <div class="right">
-                <p>prueba git modificación adipisicing elit. Doloribus necessitatibus facilis dolor quia pariatur itaque asperiores vitae, culpa quisquam earum harum ipsam nemo, quam assumenda, corporis deserunt reiciendis nisi similique.</p>
+                <p>prueba git asdasd 4 adipisicing elit. Doloribus necessitatibus facilis dolor quia pariatur itaque asperiores vitae, culpa quisquam earum harum ipsam nemo, quam assumenda, corporis deserunt reiciendis nisi similique.</p>
             </div>  
         </section>
         <section class="bottom">
